prodMetadata/src/objects/IAVAPlus_Portal_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Portal_Account_Owner__c</fullName>
        <inlineHelpText>Username of portal account owner</inlineHelpText>
        <label>Portal Account Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secure_COV_URL__c</fullName>
        <defaultValue>&quot;https://cov.force.com/iava&quot;</defaultValue>
        <description>https://cov.force.com/iava</description>
        <inlineHelpText>https://cov.force.com/iava</inlineHelpText>
        <label>Secure COV URL</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secure_Site_URL__c</fullName>
        <label>Secure Site URL</label>
        <type>Url</type>
    </fields>
    <label>IAVAPlus Portal Settings</label>
</CustomObject>